RESOLVED FIXED51443
JSC should throw away code under high memory pressure
https://bugs.webkit.org/show_bug.cgi?id=51443
Summary JSC should throw away code under high memory pressure
Gavin Barraclough
Reported 2010-12-21 20:14:31 PST
On systems with low memory this will avoid some crashes.
Attachments
Gavin Barraclough
Comment 1 2010-12-21 20:19:19 PST
Fixed in r74454.
WebKit Review Bot
Comment 2 2010-12-21 20:33:42 PST
http://trac.webkit.org/changeset/74454 might have broken Leopard Intel Release (Build), Leopard Intel Debug (Build), Qt Linux Release minimal, Qt Linux ARMv5 Release, Qt Linux ARMv7 Release, Qt Windows 32-bit Release, and Qt Windows 32-bit Debug
Note You need to log in before you can comment on or make changes to this bug.